style: fixed input not displaying well on mobile also removed TODOs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,3 @@
-/* TODO need to change IDs for classes using BEM */
 body {
   font-family: Roboto, HelveticaNeue, Arial, sans-serif;
 }
@@ -47,14 +46,14 @@ ul {
 }
 .searchbar__input {
   border: none;
-  width: 89%;
+  width: 100%;
   height: 80%;
   flex: 1;
   font-size: 1rem;
   margin-top: -0.1rem;
   color: #101010;
-  position: absolute;
-  margin-left: 29px;
+  position: relative;
+  margin-left: 1.5%;
 }
 
 .searchbar__options {
@@ -64,7 +63,8 @@ ul {
 }
 
 .searchbar__offered-language {
-  font-size: 0.8rem;
+  font-size: 13px;
+  font-family: arial, sans-serif;
 }
 .searchbar__offered-language a {
   color: #1967d2;
@@ -154,8 +154,6 @@ ul {
   padding: 0.4rem;
   font-size: 0.81rem;
 }
-
-/* TODO need to check if 900 px is enough for mobile design */
 @media (min-width: 900px) {
   .mobile-visible-only {
     display: none;
@@ -200,8 +198,11 @@ ul {
   }
   .searchbar__control {
     width: 34rem;
-    box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
     outline: none;
+  }
+  .searchbar__control:hover,
+  .searchbar__control:active {
+    box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
   }
 
   .searchbar__options {
@@ -211,20 +212,23 @@ ul {
     display: block;
     margin-bottom: 1.6rem;
   }
-
   .searchbar__buttons button {
     background-color: #f8f9fa;
     border: none;
-    width: 135px;
-    height: 34px;
-    font-size: 13px;
+    width: 8.43rem;
+    height: 2.12rem;
     border-radius: 4px;
-    margin: 4px;
+    margin: 0.25rem;
+    font-size: 0.87rem;
+    font-family: arial, sans-serif;
   }
 
   .searchbar__buttons button:hover {
     box-shadow: inset 0 0 3px #cacaca;
     cursor: pointer;
+  }
+  .searchbar__offered-language a {
+    color: #1a0dab;
   }
   .footer__links {
     display: flex;
